--- a/paper3_ref.bib
+++ b/paper3_ref.bib
@@ -1,5 +1,125 @@
 % This file was created with JabRef 2.10.
 % Encoding: GBK
+@book{slotine1991applied,
+  title={Applied nonlinear control},
+  author={Slotine, Jean-Jacques E and Li, Weiping and others},
+  volume={199},
+  number={1},
+  year={1991},
+  publisher={Prentice-Hall Englewood Cliffs, NJ}
+}
+@article{kamal2016continuous,
+title={Continuous terminal sliding-mode controller},
+author={Shyam Kamal,Jaime AMoreno,Asif Chalanga,Bijnan Bandyopadhyay,Leonid Fridman},
+journal={Automatica},
+volume={69},
+pages={308--314},
+year={2016}}
+@article{zhao2013output,
+  title={Output feedback terminal sliding mode control for a class of second order nonlinear systems},
+  author={Zhao, Dongya and Li, Shaoyuan and Zhu, Quanmin},
+  journal={Asian Journal of Control},
+  volume={15},
+  number={1},
+  pages={237--247},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+@article{dadras2012fractional,
+  title={Fractional terminal sliding mode control design for a class of dynamical systems with uncertainty},
+  author={Dadras, Sara and Momeni, Hamid Reza},
+  journal={Communications in Nonlinear Science and Numerical Simulation},
+  volume={17},
+  number={1},
+  pages={367--377},
+  year={2012},
+  publisher={Elsevier}
+}
+@article{gonzalez2014chattering,
+  title={Chattering-free sliding mode altitude control for a quad-rotor aircraft: Real-time application},
+  author={Gonz{\'a}lez, Iv{\'a}n and Salazar, Sergio and Lozano, Rogelio},
+  journal={Journal of Intelligent \& Robotic Systems},
+  volume={73},
+  number={1-4},
+  pages={137--155},
+  year={2014},
+  publisher={Springer}
+}
+@article{evangelista2013lyapunov,
+  title={Lyapunov-designed super-twisting sliding mode control for wind energy conversion optimization},
+  author={Evangelista, Carolina and Puleston, P and Valenciaga, Fernando and Fridman, Leonid M},
+  journal={Industrial Electronics, IEEE Transactions on},
+  volume={60},
+  number={2},
+  pages={538--545},
+  year={2013},
+  publisher={IEEE}
+}
+@article{mu2015continuous,
+  title={Continuous sliding mode controller with disturbance observer for hypersonic vehicles},
+  author={Mu, Chaoxu and Zong, Qun and Tian, Bailing and Xu, Wei},
+  journal={Automatica Sinica, IEEE/CAA Journal of},
+  volume={2},
+  number={1},
+  pages={45--55},
+  year={2015},
+  publisher={IEEE}
+}
+@article{edwards2016adaptive,
+  title={Adaptive continuous higher order sliding mode control},
+  author={Edwards, Christopher and Shtessel, Yuri B},
+  journal={Automatica},
+  volume={65},
+  pages={183--190},
+  year={2016},
+  publisher={Elsevier}
+}
+@inproceedings{santiesteban2013time,
+  title={Time convergence estimation of a perturbed double integrator: Family of continuous sliding mode based output feedback synthesis},
+  author={Santiesteban, Ra{\'u}l},
+  booktitle={Control Conference (ECC), 2013 European},
+  pages={3764--3769},
+  year={2013},
+  organization={IEEE}
+}
+@article{zong2013quasi,
+  title={Quasi-continuous high-order sliding mode controller and observer design for flexible hypersonic vehicle},
+  author={Zong, Qun and Wang, Jie and Tian, Bailing and Tao, Yang},
+  journal={Aerospace Science and Technology},
+  volume={27},
+  number={1},
+  pages={127--137},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{fridman2011sliding,
+  title={Sliding Modes after the first Decade of the 21st Century},
+  author={Fridman, Leonid and Moreno, Jaime and Iriarte, Rafael},
+  journal={Lecture notes in control and information sciences},
+  volume={412},
+  year={2011},
+  publisher={Springer}
+}
+@article{lee2009chattering,
+  title={Chattering reduction using multiphase sliding mode control},
+  author={Lee, Hoon and Utkin, Vadim I and Malinin, Andrey},
+  journal={International Journal of Control},
+  volume={82},
+  number={9},
+  pages={1720--1737},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+@article{boiko2013chattering,
+  title={Chattering in sliding mode control systems with boundary layer approximation of discontinuous control},
+  author={Boiko, Igor M},
+  journal={International Journal of Systems Science},
+  volume={44},
+  number={6},
+  pages={1126--1133},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
 @article{oucheriah2013pwm,
   title={PWM-based adaptive sliding-mode control for boost DC--DC converters},
   author={Oucheriah, Said and Guo, Liping},
